Fix unlocalized texts on payments list and checkouts

--- a/src/main/resources/templates/muro-checkout.html
+++ b/src/main/resources/templates/muro-checkout.html
@@ -19,7 +19,7 @@
 			<h2 th:text="#{muro-product-details}"></h2>
 			<div class="form-field"><label th:text="#{code}">FIX CODE TEXT</label><span id="code" class="value" th:text="${checkout.product.code}" ></span></div>
 			<p class="form-field"><label th:text="#{muro-page-amount}">FIX PAGE AMOUNT TEXT</label><span id="amount" class="value" th:text="${checkout.product.amount}" ></span>
-			<p class="form-field"><label th:text="#{total-price}">FIX PRICE TEXT</label><span id="price" class="value" th:text="${checkout.product.price}" ></span>
+			<p class="form-field"><label th:text="#{total-price-bch}">FIX PRICE TEXT</label><span id="price" class="value" th:text="${checkout.product.price}" ></span>
 		</div>
 		<p><button
         	class="badger-button"
