--- a/src/main/resources/templates/muro-payments.html
+++ b/src/main/resources/templates/muro-payments.html
@@ -19,8 +19,8 @@
 					<tr>
 						<th scope="col" th:text="#{date-time}">FIX DATE TIME
 						<th scope="col" th:text="#{code}">FIX CODE
-						<th scope="col" th:text="#{amount}">FIX AMOUNT
-						<th scope="col" th:text="#{price}">FIX PRICE
+						<th scope="col" th:text="#{muro-page-amount}">FIX AMOUNT
+						<th scope="col" th:text="#{total-price-bch}">FIX PRICE
 				<tbody>
 					<th:block th:each="payment : ${muroList} ">
 					<tr>
