--- a/src/main/resources/templates/muro-product-form.html
+++ b/src/main/resources/templates/muro-product-form.html
@@ -19,7 +19,7 @@
 					max="100" min="2" />
 			</div>
 			<div class="form-field">
-				<label th:text="#{total-price}"></label><input required type="number" th:field="*{price}" max="0.1"
+				<label th:text="#{total-price-bch}"></label><input required type="number" th:field="*{price}" max="0.1"
 					min="0.00005" step="0.00005" />
 			</div>
 			<p th:replace="fragments/muro-admin :: form-buttons"></p>
