Waiting payment effect

--- a/src/main/resources/templates/muro-checkout.html
+++ b/src/main/resources/templates/muro-checkout.html
@@ -27,7 +27,7 @@
 			th:text="#{pay-with-badger}"></button>		
 		<div id="muro-waiting-payment">
 			<span id="muro-checkout-pending-msg" th:text="#{muro-checkout-pending}"></span>
-			<span id="muro-waiting-effect"></span>
+			<div id="muro-waiting-effect"></div>
 			<span id="muro-checkout-pending-amount"></span> BCH
 		</div>
 		<div id="muro-send-bch">
